# AI-Emergency-Voice-Rescuer

./: .gitignore  PROJECT_SPEC.md  README.md  docker-compose.yml  mqtt_audio_receiver.py  requirements.txt  start_guardian.bat
backend_ai/: .gitignore  API_CONTRACT.json  README_AI.md  analyze_keywords.py  app.py  config.py  create_splits.py  detect.py  inference.py  mqtt_audio_receiver.py  plot_keyword_treemap.py  prepare_normal_dataset.py  requirements.txt  retrain_binary.py  task2_dataset_prep.py  task3_dataset_prep.py  task4_dataset_prep.py  test_step10.py  test_step8.py  train_audio.py  train_binary_v2.py  train_step7.py  train_step9.py  tune_threshold.py
backend_ai/datasets/: label_mapping.txt  normal_data.csv  top20_keywords.csv  valid_keywords.txt
backend_ai/models/: audio_binary_report.json  audio_keyword_report.json  final_test_report.json  training_report_v3.json
backend_ai/samples/: ambulance_tts.raw  medicine_tts.raw  normal_tts.raw
backend_ai_legacy/: analyze_dataset.py  plot_keyword_treemap_plotly.py  plot_speaker_ranking.py  show_keywords.py  task5_proper_split.py  test_step13.py  test_step8.py  train_audio.py  train_step12.py  train_step7.py  train_v2.py
esp32/: CMakeLists.txt  README.md  sdkconfig
esp32/main/: CMakeLists.txt  main.c  voice_recorder.c  voice_recorderdotc  web_server.h  wifi.html
frontend/: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
go_backend/: .air.toml  .gitignore  go.mod  go.sum  main.go  main_test.go
mobile/: README.md  pubspec.yaml
(+126 files in other folders)
